# streamlit_user_management

./: .gitignore  AUTH.md  GEMINI.md  JWT.md  README.md  ROADMAP.md  TOKENS.md  breaking_changes_documentation.md  dependency_analysis_report.md  dependency_update_matrix.json  main.py  package-lock.json  pyproject.toml  requirements.txt  streamlit_main.py  test_chart_integration.py  user_management.db
.hypothesis/constants/: 058779a91d2a1de4  0c5cd8aa39970e64  376509609da5418b  3b9b7566c21076cd  3eb2ccd8291de290  56c80710d0f7123b  7d06d279d5f6148a  9d485a2f80e048db  aa082928d4869f74  da39a3ee5e6b4b0d  dfda654734acdac0  e087644cb5544f3d
.hypothesis/examples/04e6b3400353b141/: 78bc127ea110dd82  abf13273152860be  aedbbf237c8a67aa  d785bf0d96b9f6ae
.hypothesis/examples/78bc127ea110dd82/: 80ac8b9e3ce1e607
.hypothesis/examples/abf13273152860be/: 7fdf6437dc64b323  84a0372e3a57d7b5  983ebbb3413888c5  f703ad302734a164  fdadedad1edb2575
.hypothesis/examples/aedbbf237c8a67aa/: 590ec83234908a7b
.hypothesis/examples/d785bf0d96b9f6ae/: 1eb78daffd8a6997  54ebdd935d074ef8  57565cabbccb80e4  5b354f02ce96c0d7  6ae5e466aca557b0  bcfd326e3b07976b  d0547bae0d0c4a94  d742691229259763  d8427adc65f92a78  fb924a36cda8b19c
.kiro/specs/entraid-authentication/: design.md  requirements.md  tasks.md
.kiro/specs/sdk-modernization-and-visual-enhancement/: design.md  requirements.md  tasks.md
.streamlit/: config.toml  secrets.toml  secrets.toml.example
docs/: auth_dependency_update_summary.md  task-6.2-implementation-summary.md
examples/: enhanced_visualization_examples.py
src/: example.env  settings.py
src/auth/: __init__.py  claims.py  config.py  enhanced_auth.py  external.py  graph_client.py  guard.py  logging.py  msal_guard.py  permissions.py
src/database/: database.py  models.py
src/finops/: data.py  engine.py
src/nexus/: orchestrator.py  protocol.py
src/ui/: admin.py  brave_theme_system.py  caching_showcase.py  chat.py  components.py  dashboard.py  dialog_showcase.py  enhanced_caching.py  enhanced_data_editor.py  enhanced_dialogs.py  enhanced_metrics.py  managers.py  metrics_showcase.py  pages.py  services.py  styles.py  theme_showcase.py  visual_enhancement_engine.py  visual_showcase.py
src/ui/cards/: engine.py  enhanced_charts.py  impl.py
tests/: test_auth_claims.py  test_auth_config.py  test_auth_dependencies.py  test_e2e.py  test_e2e_mock.py  test_enhanced_logout.py  test_enhanced_theme_system.py  test_graph_client.py  test_visual_enhancement_engine.py
