[project]
name = "streamlit-user-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.5",
    "httpx>=0.28.1",
    "msal>=1.34.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-jose[cryptography]>=3.5.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "uvloop>=0.22.1", # Performance boost for Streamlit
    "orjson>=3.11.5",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.29.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
